--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
     "pg": "^7.14.0",
     "sequelize": "^5.21.2"
   }
